--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="espresso">#5d2816</color>
     <color name="darkbrown">#1B0000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="button_background">#000</color>
+    <color name="button_text">#FFFFFF</color>
+    <color name="link_text">#D110A1</color>
 </resources>
