--- a/app/src/main/res/layout/activity_customer_edit_profile.xml
+++ b/app/src/main/res/layout/activity_customer_edit_profile.xml
@@ -111,7 +111,7 @@
         android:importantForAutofill="no" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btn_signup"
         android:layout_width="160dp"
         android:layout_height="39dp"
         android:layout_gravity="center"
