sign up - sign in links are created

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -136,6 +136,8 @@
         android:layout_marginBottom="25dp"
         android:text="@string/signup_btn_txt"
         android:textColor="@color/link_text"
+        android:clickable="true"
+        android:onClick="onSignUpLinkClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
