--- a/app/src/main/res/layout/activity_customer_profile.xml
+++ b/app/src/main/res/layout/activity_customer_profile.xml
@@ -34,7 +34,7 @@
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
             <TextView
-                android:id="@+id/textView19"
+                android:id="@+id/txt_profile_lastName"
                 style="@style/FormInput"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -64,7 +64,7 @@
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">
 
             <TextView
-                android:id="@+id/textView20"
+                android:id="@+id/txt_profile_phone"
                 style="@style/FormInput"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -94,7 +94,7 @@
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
 
             <TextView
-                android:id="@+id/textView21"
+                android:id="@+id/txt_profile_email"
                 style="@style/FormInput"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -127,7 +127,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/txt_fullName"
             style="@style/MainHeading"
             android:layout_width="248dp"
             android:layout_height="42dp"
@@ -146,7 +146,7 @@
             android:layout_marginTop="10dp"
             android:text="It is a pleasure to have you back"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/txt_fullName" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
@@ -157,7 +157,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView16">
 
             <TextView
-                android:id="@+id/textView17"
+                android:id="@+id/txt_profile_firstName"
                 style="@style/FormInput"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -187,7 +187,7 @@
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">
 
             <TextView
-                android:id="@+id/textView18"
+                android:id="@+id/txt_profile_birthday"
                 style="@style/FormInput"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
