--- a/app/src/main/res/layout/activity_favourites.xml
+++ b/app/src/main/res/layout/activity_favourites.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.customer.FavouritesActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/txt_fullName"
         android:layout_width="wrap_content"
         android:layout_height="42dp"
         android:layout_marginStart="25dp"
@@ -25,7 +25,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+        app:layout_constraintTop_toBottomOf="@+id/txt_fullName">
 
         <LinearLayout
             android:orientation="vertical"
