--- a/app/src/main/res/layout/activity_customer_profile.xml
+++ b/app/src/main/res/layout/activity_customer_profile.xml
@@ -215,6 +215,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="Edit Profile"
+            android:onClick="onEditProfileButtonClick"
             app:layout_constraintEnd_toStartOf="@+id/button8"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
