edit profile is done

--- a/app/src/main/res/layout/activity_customer_change_password.xml
+++ b/app/src/main/res/layout/activity_customer_change_password.xml
@@ -8,7 +8,7 @@
 
     <EditText
         android:fontFamily="@font/form_labels"
-        android:id="@+id/txt_phoneNumber"
+        android:id="@+id/txt_edit_phoneNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
@@ -32,7 +32,7 @@
         android:fontFamily="@font/form_labels"
         android:text="@string/auth_confirm_pw_label"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_lastName" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_edit_lastName" />
 
     <TextView
         android:id="@+id/textView6"
@@ -57,7 +57,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <EditText
-        android:id="@+id/txt_firstName"
+        android:id="@+id/txt_edit_firstName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
@@ -81,11 +81,11 @@
         android:fontFamily="@font/form_labels"
         android:text="New Password"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_firstName" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_edit_firstName" />
 
     <EditText
         android:fontFamily="@font/form_labels"
-        android:id="@+id/txt_lastName"
+        android:id="@+id/txt_edit_lastName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
