--- a/app/src/main/res/layout/activity_customer_profile.xml
+++ b/app/src/main/res/layout/activity_customer_profile.xml
@@ -239,9 +239,23 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="#F00"
-            android:text="Delete Account"
+            android:text="Sign Out"
+            android:onClick="onSignOutClick"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button4" />
+
+        <Button
+            android:id="@+id/button4"
+            style="@style/SubmitButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="#F00"
+            android:text="Delete Account"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button7" />
 
