--- a/app/src/main/res/layout/activity_customer_profile.xml
+++ b/app/src/main/res/layout/activity_customer_profile.xml
@@ -254,6 +254,7 @@
             android:layout_height="wrap_content"
             android:background="#F00"
             android:text="Delete Account"
+            android:onClick="onDeleteButtonClick"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
