password change was added

--- a/app/src/main/res/layout/activity_customer_change_password.xml
+++ b/app/src/main/res/layout/activity_customer_change_password.xml
@@ -8,7 +8,7 @@
 
     <EditText
         android:fontFamily="@font/form_labels"
-        android:id="@+id/txt_edit_phoneNumber"
+        android:id="@+id/txt_chngpwd_confirmPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
@@ -32,7 +32,7 @@
         android:fontFamily="@font/form_labels"
         android:text="@string/auth_confirm_pw_label"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_edit_lastName" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_chngpwd_password" />
 
     <TextView
         android:id="@+id/textView6"
@@ -46,46 +46,19 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="60dp"
-        android:fontFamily="@font/form_labels"
-        android:text="Current Passowrd"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
-
-    <EditText
-        android:id="@+id/txt_edit_firstName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="25dp"
-        android:ems="10"
-        android:hint=""
-        android:fontFamily="@font/form_labels"
-        android:importantForAutofill="no"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
-    <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="100dp"
         android:fontFamily="@font/form_labels"
         android:text="New Password"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_edit_firstName" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <EditText
         android:fontFamily="@font/form_labels"
-        android:id="@+id/txt_edit_lastName"
+        android:id="@+id/txt_chngpwd_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
@@ -93,7 +66,7 @@
         android:layout_marginEnd="25dp"
         android:ems="10"
         android:hint=""
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8"
@@ -109,6 +82,7 @@
         android:background="#FFF"
         android:fontFamily="@font/submit_button"
         android:text="Cancel"
+        android:onClick="onCancelButtonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -123,6 +97,7 @@
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="15dp"
         android:fontFamily="@font/submit_button"
+        android:onClick="onChangePasswordButtonClick"
         android:text="Change Password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
