--- a/app/src/main/res/layout/activity_customer_profile.xml
+++ b/app/src/main/res/layout/activity_customer_profile.xml
@@ -18,6 +18,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="50dp"
+            android:onClick="onFavouritesButtonClick"
             android:text="View Favourites"
             android:textSize="10dp"
             app:layout_constraintEnd_toEndOf="parent"
